--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,7 @@
 html {
     background-color: black;
     color: white;
-    font-family: 'Roboto';
+    font-family: 'Roboto', Arial, Helvetica, sans-serif;
+    font-weight: 400;
+    font-size: 15px;
 }
